--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,12 @@
             <artifactId>springdoc-openapi-data-rest</artifactId>
             <version>${springdoc.openapi.version}</version>
         </dependency>
-
+        <!--   enable javadoc support     -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-javadoc</artifactId>
+            <version>${springdoc.openapi.version}</version>
+        </dependency>
         <!--    swagger-core依赖该包，部分原因，需单独升级依赖版本    -->
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -431,6 +436,12 @@
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
                             <version>${mapstruct.version}</version>
+                        </path>
+                        <!--4javadoc-->
+                        <path>
+                            <groupId>com.github.therapi</groupId>
+                            <artifactId>therapi-runtime-javadoc-scribe</artifactId>
+                            <version>0.12.0</version>
                         </path>
                     </annotationProcessorPaths>
                     <!--https://docs.spring.io/spring-boot/docs/2.4.4/reference/html/appendix-configuration-metadata.html#configuration-metadata-annotation-processor-->
