--- a/pom.xml
+++ b/pom.xml
@@ -243,10 +243,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- ip2region IP库 -->
         <dependency>
-            <groupId>org.lionsoul</groupId>
-            <artifactId>ip2region</artifactId>
-            <version>1.7.2</version>
+            <groupId>net.dreamlu</groupId>
+            <artifactId>mica-ip2region</artifactId>
+            <version>2.5.6</version>
         </dependency>
 
         <!--lombok插件-->
