调整springfox问题修复方式。更新jar

--- a/pom.xml
+++ b/pom.xml
@@ -136,12 +136,12 @@
             Note that the path matching strategy for actuator endpoints is not configurable via a configuration property.
             故，在业务中不需要监控系列的前提下，移除。若需要使用该功能，当前需要用ex-lib中的springfox-spring-webmvc-3.0.0.jar替代原jar。方可启动成功
             -->
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-boot-starter-actuator</artifactId>
-                    <groupId>org.springframework.boot</groupId>
-                </exclusion>
-            </exclusions>
+            <!--<exclusions>-->
+            <!--    <exclusion>-->
+            <!--        <artifactId>spring-boot-starter-actuator</artifactId>-->
+            <!--        <groupId>org.springframework.boot</groupId>-->
+            <!--        </exclusion>-->
+            <!--</exclusions>-->
         </dependency>
 
         <!--spring boot 集成redis所需common-pool2-->
