--- a/eladmin-starter/src/main/resources/config/application-dev.yml
+++ b/eladmin-starter/src/main/resources/config/application-dev.yml
@@ -348,6 +348,8 @@ local:
     name: X0X
     # 一个开关，标识是否加载相关但类
     load-os: true
+    # 使用多个策略配置。默认false
+    multi-security: false
     # 表名映射
     table-name:
       user: sys_user
