--- a/eladmin-tools/pom.xml
+++ b/eladmin-tools/pom.xml
@@ -13,7 +13,7 @@
     <name>工具模块</name>
 
     <properties>
-        <mail.version>1.4.7</mail.version>
+        <mail.version>1.6.2</mail.version>
         <qiniu.version>7.8.0</qiniu.version>
         <alipay.version>4.18.0.ALL</alipay.version>
         <aliyun.oss.version>3.13.2</aliyun.oss.version>
@@ -49,11 +49,11 @@
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
+            <artifactId>javax.mail-api</artifactId>
             <version>${mail.version}</version>
         </dependency>
 
-        <!--    对象存储计划改为阿里云OSS  版本问题  -->
+        <!--    对象存储计划改为阿里云OSS  -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>aliyun-oss-spring-boot-starter</artifactId>
