--- a/pom.xml
+++ b/pom.xml
@@ -515,6 +515,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jmod-plugin</artifactId>
+                <version>3.0.0-alpha-1</version>
                 <extensions>true</extensions>
             </plugin>
             <plugin>
