--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,8 @@
         <commons-pool2.version>2.11.1</commons-pool2.version>
         <!--mapstruct也要用新版本才行-->
         <mapstruct.version>1.4.2.Final</mapstruct.version>
-
+        <!--    指定版本，新版本Spring Boot发布后可移除    -->
+        <log4j2.version>2.16.0</log4j2.version>
         <!--logstash有所依赖，需要使用management统一管理依赖-->
         <logstash.version>7.0.1</logstash.version>
         <logback.version>1.2.8</logback.version>
