system模块与tools模块解耦

--- a/eladmin-search/pom.xml
+++ b/eladmin-search/pom.xml
@@ -28,6 +28,11 @@
         </dependency>
         <dependency>
             <groupId>com.lwohvye</groupId>
+            <artifactId>eladmin-tools</artifactId>
+            <version>${project.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lwohvye</groupId>
             <artifactId>eladmin-generator</artifactId>
             <version>${project.core.version}</version>
         </dependency>
